updated week 8 examples

--- a/examples/week-8/flexbox.html
+++ b/examples/week-8/flexbox.html
@@ -166,6 +166,15 @@
         <div>5</div>
       </div> 
       <hr>    
+      <h2>Order</h2>
+      <div id="flex-order" class="flex-container">
+        <div id="one">1</div>
+        <div id="two">2</div>
+        <div id="three">3</div>
+        <div id="four">4</div>
+        <div id="five">5</div>
+      </div>      
+      <hr>    
       <h2>Flex grow</h2>
       <div id="flex-grow" class="flex-grow flex-container">
         <div>1</div>
@@ -205,6 +214,13 @@
       <hr>     
       <h2>Flex shrink</h2>
       <div id="flex-shrink" class="flex-shrink flex-container">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+        <div>5</div>
+      </div>        
+      <div id="flex-shrink-all-children" class="flex-shrink flex-container">
         <div>1</div>
         <div>2</div>
         <div>3</div>
