commenting out examples

--- a/examples/week-9/images.html
+++ b/examples/week-9/images.html
@@ -65,9 +65,9 @@
       <!-- end sizes -->
 
       <!-- begin resolution switching -->
-      <div id="kitten-400x400">
+      <!-- <div id="kitten-400x400">
         ​<img srcset="kitten-1x.jpg 1x, kitten-2x.jpg 2x" src="kitten-1x.jpg" alt="This is an image of a kitten">
-      </div>
+      </div> -->
       <!-- end resolution switching -->
 
       <!-- begin art direction -->
