--- a/examples/week-9/media-queries.html
+++ b/examples/week-9/media-queries.html
@@ -9,23 +9,23 @@
   <body>
     <main>
       <!-- begin responsive -->
-        <section id="responsive">
+        <!-- <section id="responsive">
           <div class="responsive-child">responsive child</div>
           <div class="responsive-child">responsive child</div>
           <div class="responsive-child">responsive child</div>
           <div class="responsive-child">responsive child</div>
           <div class="responsive-child">responsive child</div>
-        </section>
+        </section> -->
       <!-- end responsive -->
 
       <!-- begin adaptive -->
-      <section id="adaptive">
+      <!-- <section id="adaptive">
         <div class="adaptive-child">adaptive child</div>
         <div class="adaptive-child">adaptive child</div>
         <div class="adaptive-child">adaptive child</div>
         <div class="adaptive-child">adaptive child</div>
         <div class="adaptive-child">adaptive child</div>
-      </section>
+      </section> -->
       <!-- end adaptive -->
     </main>
   </body>
