week 7 updated examples and notes

--- a/examples/week-7/flexbox.html
+++ b/examples/week-7/flexbox.html
@@ -9,6 +9,14 @@
   <body>
     <main>
       <h1>Flex</h1>
+      <h2>Default</h2>
+      <div id="default" class="flex-container">
+        <div>1</div>
+        <div>2</div>
+        <div>3</div>
+        <div>4</div>
+        <div>5</div>
+      </div>   
       <h2>Wrapping</h2>
       <div id="nowrap" class="flex-container">
         <div>1</div>
